# python-sdk

./: .gitignore  .pinact.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_POLICY.md  RELEASE_SETUP.md  SECURITY.md  llm-full.txt  llm.txt  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  mcp-compatibility.md
.github/workflows/: backport-fixes.yml  ci.yml  codeql.yml  cut-release.yml  dependency-review.yml  publish-pypi.yml  release.yml  scorecard.yml  security.yml  stale.yml  workflows-lint.yml
authplane/: README.md  __init__.py  _dpop_adapter.py  auth_provider.py  cache.py  circuit_breaker.py  client.py  credentials.py  dpop.py  dpop_verification.py  errors.py
authplane-fastmcp/: .gitignore  LICENSE  README.md  pyproject.toml
authplane-fastmcp/authplane_fastmcp/: __init__.py  auth.py  url_elicitation.py  verifier.py
authplane-fastmcp/demo/: README.md  mcpserver.py  run.sh
authplane-fastmcp/docs/: user-guide.md
authplane-fastmcp/tests/: conftest.py  test_auth_factory.py  test_integration.py  test_url_elicitation.py  test_verifier.py  test_verifier_dpop_cache.py
authplane-mcp/: .gitignore  README.md  pyproject.toml  pyrightconfig.json
authplane-mcp/authplane_mcp/: __init__.py  _request_context.py  auth.py  url_elicitation.py  verifier.py
authplane-mcp/demo/: README.md  mcpserver.py  run.sh
authplane-mcp/docs/: user-guide.md
authplane-mcp/tests/: test_auth.py  test_request_context.py  test_url_elicitation.py  test_verifier.py  test_verifier_dpop_cache.py
authplane/docs/: user-guide.md
authplane/internal/: __init__.py  cache_headers.py  document_cache.py  document_fetcher.py  fetch_result.py  jwt.py  metadata.py  urls.py
authplane/net/: __init__.py  fetch_settings.py  http.py  ip_validation.py  ssrf.py
authplane/oauth/: __init__.py  client_credentials.py  introspection.py  parsing.py  prm.py  revocation.py  token_exchange.py  types.py
authplane/verifier/: __init__.py  claims.py  verifier.py
conformance-tests/: README.md  conftest.py  test_catalog_alignment.py  test_jwt_and_dpop_conformance.py  test_oauth_protocol_conformance.py  test_rfc8414_conformance.py
scripts/: backport-fixes.sh  manual-e2e-setup.sh  manual-e2e-smoke.sh
tests/: conftest.py  test_cache.py  test_circuit_breaker.py  test_client.py  test_dev_mode.py  test_dpop_adapter.py  test_dpop_and_security.py  test_errors.py  test_protocol_and_http_edges.py
tests/internal/: test_cache_headers.py  test_document_cache.py  test_jwks.py  test_jwks_fetcher.py  test_jwks_key_lookup.py  test_metadata.py  test_urls.py
tests/net/: test_fetch_settings.py  test_http.py  test_ssrf.py  test_ssrf_edge_cases.py
tests/oauth/: test_client_credentials.py  test_introspection.py  test_prm.py  test_revoke.py  test_token_exchange.py
tests/verifier/: test_claims.py  test_revocation.py  test_verifier.py  test_verifier_coverage.py  test_verifier_edge_cases.py
