[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "authplane-sdk"
dynamic = ["version"]
description = "Authplane SDK for Python — OAuth 2.1 JWT validation and token operations for protected resources"
authors = [
    { name = "Authplane Team" }
]
readme = "authplane/README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
keywords = ["oauth", "jwt", "mcp", "authentication", "authorization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "authlib>=1.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "cryptography>=42",
    "coverage>=7",
    "pyright>=1.1",
    "ruff>=0.8",
]

[project.urls]
Homepage = "https://github.com/AuthPlane/python-sdk"
Repository = "https://github.com/AuthPlane/python-sdk"
Issues = "https://github.com/AuthPlane/python-sdk/issues"
Changelog = "https://github.com/AuthPlane/python-sdk/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["authplane"]
# The package README is referenced by ``project.readme`` and ships in the
# wheel because it lives inside ``authplane/``. The user guide is large,
# import-irrelevant prose — keep it in the sdist, not the installed wheel.
exclude = ["authplane/docs"]

# Without this, hatchling's default sdist behaviour ("everything tracked by
# VCS under the build root") tarballs the whole monorepo into authplane-sdk.
# Scope it to the package itself; pyproject.toml, authplane/README.md (the
# ``project.readme``) and LICENSE are always included automatically.
[tool.hatch.build.targets.sdist]
only-include = ["authplane", "CHANGELOG.md"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "conformance-tests"]
# importlib import mode so test files with identical basenames across
# packages (e.g. tests/verifier/test_verifier.py and authplane-mcp/tests/
# test_verifier.py) do not collide when collected in a single invocation.
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["authplane"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
target-version = "py311"
line-length = 100
# ``conformance/`` is the sibling AuthPlane/conformance repo cloned into the
# workspace by CI to provide the shared catalog; it is not source we own,
# so do not lint or format-check it.  ``conformance-tests/`` (this repo's
# tests against the catalog) is intentionally NOT excluded.
extend-exclude = ["conformance"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["authplane"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.version]
source = "vcs"
