[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "authplane-fastmcp"
dynamic = ["version"]
description = "Authplane JWT validation adapter for FastMCP"
readme = "README.md"
license = "Apache-2.0"
authors = [
    { name = "Authplane Team" }
]
keywords = ["oauth", "jwt", "fastmcp", "adapter", "authplane"]
requires-python = ">=3.11"
dependencies = [
    "authplane-sdk==0.1.0",
    "fastmcp>=2.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/AuthPlane/python-sdk/tree/main/authplane-fastmcp"
Issues = "https://github.com/AuthPlane/python-sdk/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "respx>=0.21",
    "cryptography>=42",
    "coverage>=7",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "--import-mode=importlib"

[tool.coverage.run]
source = ["authplane_fastmcp"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __iter__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "RUF",    # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["authplane_fastmcp"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.hatch.version]
source = "vcs"
raw-options.root = ".."
